[oss-fuzz 42503008] Direct-leak in ps_track_fill (ps.h)

Ref:

xeon ~/work/git/vlc/build-asan $ ./test/vlc-demux-dec-run /home/tom/Downloads/clusterfuzz-* 
=================================================================
==3263690==ERROR: LeakSanitizer: detected memory leaks

Direct leak of 4 byte(s) in 1 object(s) allocated from:
    #0 0x7fd65d4f4c77 in malloc ../../../../src/libsanitizer/asan/asan_malloc_linux.cpp:69
    #1 0x7fd656b78f35 in ps_track_fill ../../modules/demux/mpeg/ps.h:319
    #2 0x7fd656b79f60 in ps_pkt_parse_system ../../modules/demux/mpeg/ps.h:505
    #3 0x7fd656b7c3da in Demux ../../modules/demux/mpeg/ps.c:505
    #4 0x7fd65cf19c45 in demux_Demux ../../src/input/demux.c:223
    #5 0x55fb32be73a9 in demux_process_stream ../../test/src/input/demux-run.c:306
    #6 0x55fb32be7668 in vlc_demux_process_url ../../test/src/input/demux-run.c:348
    #7 0x55fb32be7707 in vlc_demux_process_path ../../test/src/input/demux-run.c:362
    #8 0x55fb32be6559 in main ../../test/vlc-demux-run.c:50
    #9 0x7fd65cc33d67 in __libc_start_call_main ../sysdeps/nptl/libc_start_call_main.h:58

SUMMARY: AddressSanitizer: 4 byte(s) leaked in 1 allocation(s).

Sample:

Edited by Thomas Guillem