demux: ps: always clean the track format

Conditionally cleaning the track format leads to leaks on ill-formed ps
packets. Usually when a track started allocating fmt metadata and the
input has an unexpected EOF.

The format is always zero initialized so we can count on es_format_Clean
not to double free.

Fixes https://issues.oss-fuzz.com/issues/42503008
Fixes #29013

Found-by: continuous fuzzing process https://github.com/google/oss-fuzz/tree/master/projects/vlc